--- a/requirements.txt
+++ b/requirements.txt
@@ -7,18 +7,23 @@ click==7.1.2
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
-google-api-core==1.17.0
-google-auth==1.14.1
-google-cloud-bigquery==1.24.0
-google-cloud-core==1.3.0
-google-resumable-media==0.5.0
-googleapis-common-protos==1.51.0
+google-api-core==2.11.0
+google-auth==2.16.0
+google-cloud-bigquery==3.4.2
+google-cloud-core==2.3.2
+google-crc32c==1.5.0
+google-resumable-media==2.4.1
+googleapis-common-protos==1.58.0
+grpcio==1.51.1
+grpcio-status==1.51.1
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
-protobuf==3.11.3
+packaging==23.0
+proto-plus==1.22.2
+protobuf==4.21.12
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dateutil==2.8.1
